# pool32

./: .gitignore  CMakeLists.txt
.github/workflows/: main.yml
src/: example.c  hexdump.c  main.c  pool.c
src/include/: hexdump.h  pool.h
test/: test_main.c
